--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -32,14 +32,15 @@
         - [9.2.2.3.2. link_shadow_page(): 将下级影子页表页与页表项关联起来](#92232-link_shadow_page-将下级影子页表页与页表项关联起来)
       - [9.2.2.4. kvm_tdp_page_fault 小结](#9224-kvm_tdp_page_fault-小结)
 - [10. kvm_mmu_free_page(): 回收](#10-kvm_mmu_free_page-回收)
-- [EPT vm-entry处理](#ept-vm-entry处理)
-  - [KVM_REQ_MMU_RELOAD](#kvm_req_mmu_reload)
-  - [KVM_REQ_MMU_SYNC](#kvm_req_mmu_sync)
-  - [KVM_REQ_TLB_FLUSH](#kvm_req_tlb_flush)
-- [EPT VM-exit 处理](#ept-vm-exit-处理)
-  - [CR3寄存器](#cr3寄存器)
-- [11. 逆向映射机制](#11-逆向映射机制)
-- [12. 参考](#12-参考)
+- [11. EPT vm-entry处理](#11-ept-vm-entry处理)
+  - [11.1. KVM_REQ_MMU_RELOAD](#111-kvm_req_mmu_reload)
+  - [11.2. KVM_REQ_MMU_SYNC](#112-kvm_req_mmu_sync)
+  - [11.3. KVM_REQ_TLB_FLUSH](#113-kvm_req_tlb_flush)
+- [12. EPT VM-exit 处理](#12-ept-vm-exit-处理)
+  - [12.1. CR3寄存器](#121-cr3寄存器)
+  - [12.2. handle_ept_violation](#122-handle_ept_violation)
+- [13. 逆向映射机制](#13-逆向映射机制)
+- [14. 参考](#14-参考)
 
 <!-- /code_chunk_output -->
 
@@ -2049,27 +2050,29 @@ static void kvm_mmu_commit_zap_page(struct kvm *kvm,
 
 有三种case调用该函数：
 
-(1) host 内存需要回收时mmu_shrink_scan
+(1) host 内存需要回收时 mmu_shrink_scan
 
 (2) Guest OS memory region 发生变化
 
 (3) ept 加载时`mmu_alloc_direct_roots==>make_mmu_pages_available`
 
-# EPT vm-entry处理
+# 11. EPT vm-entry处理
 
-## KVM_REQ_MMU_RELOAD
+## 11.1. KVM_REQ_MMU_RELOAD
 
-kvm_mmu_invalidate_zap_all_pages==> kvm_reload_remote_mmus==> make_all_cpus_request(kvm,KVM_REQ_MMU_RELOAD);
+`kvm_mmu_invalidate_zap_all_pages` ==> `kvm_reload_remote_mmus` ==> `make_all_cpus_request(kvm,KVM_REQ_MMU_RELOAD);`
 
 vcpu_enter_guest==>
 
+```cpp
 if(kvm_check_request(KVM_REQ_MMU_RELOAD, vcpu))
 
            kvm_mmu_unload(vcpu); //call mmu_free_roots
+```
 
 kvm_mmu_unload会调用prepare_zap_oldest_mmu_page，将所有sp放入invalid_list
 
-## KVM_REQ_MMU_SYNC
+## 11.2. KVM_REQ_MMU_SYNC
 
 kvm_mmu_get_page
 
@@ -2083,7 +2086,7 @@ kvm_mmu_get_page
 
 set_spte  ==》 mmu_need_write_protect  ==》kvm_unsync_pages  ==》__kvm_unsync_page==》kvm_mmu_mark_parents_unsync
 
- 
+
 
 vcpu_enter_guest==>
 
@@ -2131,7 +2134,7 @@ kvm_sync_roots==> mmu_sync_children
 
  
 
-static int__kvm_sync_page(struct kvm_vcpu *vcpu, struct kvm_mmu_page *sp,
+static int __kvm_sync_page(struct kvm_vcpu *vcpu, struct kvm_mmu_page *sp,
 
               struct list_head*invalid_list, bool clear_unsync)
 
@@ -2170,11 +2173,11 @@ static int__kvm_sync_page(struct kvm_vcpu *vcpu, struct kvm_mmu_page *sp,
 }
 
 
-## KVM_REQ_TLB_FLUSH
+## 11.3. KVM_REQ_TLB_FLUSH
 
 kvm_mmu_flush_tlb ==》 kvm_make_request(KVM_REQ_TLB_FLUSH, vcpu);
 
- 
+
 
 vcpu_enter_guest==>
 
@@ -2182,7 +2185,7 @@ vcpu_enter_guest==>
 
            kvm_x86_ops->tlb_flush(vcpu);
 
- 
+
 
 static voidvmx_flush_tlb(struct kvm_vcpu *vcpu)
 
@@ -2251,17 +2254,491 @@ static inline void__invept(int ext, u64 eptp, gpa_t gpa)
 }
 
  
-# EPT VM-exit 处理
+# 12. EPT VM-exit 处理
 
-## CR3寄存器
+## 12.1. CR3寄存器
+
+static voidvmx_set_cr3(struct kvm_vcpu *vcpu, unsigned long cr3)
+
+{
+
+    unsigned long guest_cr3;
+
+    u64 eptp;
+
+ 
+
+    guest_cr3 = cr3;
+
+    if (enable_ept) {
+
+       eptp = construct_eptp(cr3);
+
+       vmcs_write64(EPT_POINTER, eptp); //设置ept地址
+
+       if (is_paging(vcpu) || is_guest_mode(vcpu)) //分页或nest kvm
+
+           guest_cr3 = kvm_read_cr3(vcpu);
+
+       else
+
+           guest_cr3 = vcpu->kvm->arch.ept_identity_map_addr;//实模式
+
+       ept_load_pdptrs(vcpu);
+
+    }
+
+ 
+
+    vmx_flush_tlb(vcpu);
+
+    vmcs_writel(GUEST_CR3, guest_cr3);
+
+}
+
+ 
+
+mmu_alloc_direct_roots中会分配arch.mmu.root_hpa
+
+kvm_mmu_load==> vcpu->arch.mmu.set_cr3(vcpu,vcpu->arch.mmu.root_hpa);
+
+ 
+
+## 12.2. handle_ept_violation
+
+  a当EXIT_QUALIFICATION
+
+    bit7=0bit8=1为非法case
+
+    bit7=1 时gpa来自对guest-linear-address的转换， bit8为0表明eptviolation发生在访问guest paging structure.
+
+   bit7 =1, bit8 = 0表明ept violation发生在gpa->hpa
+
+   bit7=0bit8=0 表明gpa不是由guest-linear-addr引起（例如mov to cr3 指令导致pdpte加载）
+
+ 
+
+b. /* Itis a write fault? */
+
+    error_code= exit_qualification & (1U << 1);
+
+    /* Itis a fetch fault? */
+
+    error_code|= (exit_qualification & (1U << 2)) << 2;
+
+    /* eptpage table is present? */
+
+    error_code|= (exit_qualification >> 3) & 0x1;
+
+    vcpu->arch.exit_qualification= exit_qualification;
+
+    returnkvm_mmu_page_fault(vcpu, gpa, error_code, NULL, 0);
+
+ 
+
+kvm_mmu_page_fault==》 vcpu->arch.mmu.page_fault ==》tdp_page_fault
+
+ 
+
+{
+
+    。。。。。。。
+
+    if (unlikely(error_code & PFERR_RSVD_MASK)) {
+
+       r = handle_mmio_page_fault(vcpu, gpa, error_code, true);
+
+ 
+
+       if (likely(r != RET_MMIO_PF_INVALID))
+
+           return r;
+
+    }
+
+ 
+
+    r = mmu_topup_memory_caches(vcpu);
+
+    if (r)
+
+       return r;
+
+ 
+
+    force_pt_level = mapping_level_dirty_bitmap(vcpu, gfn);
+
+    if (likely(!force_pt_level)) {
+
+       level = mapping_level(vcpu, gfn);
+
+       gfn &= ~(KVM_PAGES_PER_HPAGE(level) - 1);
+
+    } else
+
+       level = PT_PAGE_TABLE_LEVEL;
+
+ 
+
+    if (fast_page_fault(vcpu, gpa, level, error_code))
+
+       return 0;
+
+ 
+
+    mmu_seq = vcpu->kvm->mmu_notifier_seq;
+
+    smp_rmb();
+
+ 
+
+    if (try_async_pf(vcpu, prefault, gfn, gpa, &pfn, write,&map_writable))
+
+       return 0;
+
+ 
+
+    if (handle_abnormal_pfn(vcpu, 0, gfn, pfn, ACC_ALL, &r))
+
+       return r;
+
+ 
+
+    spin_lock(&vcpu->kvm->mmu_lock);
+
+    if (mmu_notifier_retry(vcpu->kvm, mmu_seq))
+
+       goto out_unlock;
+
+    make_mmu_pages_available(vcpu);
+
+    if (likely(!force_pt_level))
+
+       transparent_hugepage_adjust(vcpu, &gfn, &pfn,&level);
+
+    r = __direct_map(vcpu, gpa, write, map_writable,
+
+            level, gfn, pfn,prefault);
+
+    spin_unlock(&vcpu->kvm->mmu_lock);
+
+    。。。。。。
+
+}
+
+mapping_level 根据gfn得到映射页表的级数
+
+static intmapping_level(struct kvm_vcpu *vcpu, gfn_t large_gfn)
+
+{
+
+    int host_level, level, max_level;
+
+ 
+
+    host_level = host_mapping_level(vcpu->kvm, large_gfn);
+
+ 
+
+    if (host_level == PT_PAGE_TABLE_LEVEL)
+
+       return host_level;
+
+ 
+
+    max_level = min(kvm_x86_ops->get_lpage_level(), host_level);
+
+ 
+
+    for (level = PT_DIRECTORY_LEVEL; level <= max_level; ++level)
+
+       if (has_wrprotected_page(vcpu->kvm, large_gfn, level))
+
+           break;
+
+ 
+
+    return level - 1;
+
+}
+
+ 
+
+try_async_pf的到gpa对应的hpa
+
+ 
+
+static int __direct_map(structkvm_vcpu *vcpu, gpa_t v, int write,
+
+           int map_writable, int level, gfn_t gfn, pfn_t pfn,
+
+           bool prefault)
+
+{
+
+   .......
+
+//循环遍历guest os页帧号在影子页表中的页表项   
+
+    for_each_shadow_entry(vcpu, (u64)gfn << PAGE_SHIFT,iterator) {
+
+       if (iterator.level == level) { //如果等于要设置的页表级别，设置对应的页表
+
+           mmu_set_spte(vcpu, iterator.sptep, ACC_ALL,
+
+                   write,&emulate, level, gfn, pfn,
+
+                   prefault,map_writable);
+
+           direct_pte_prefetch(vcpu, iterator.sptep);
+
+           ++vcpu->stat.pf_fixed;
+
+           break;
+
+       }
+
+ 
+
+       drop_large_spte(vcpu, iterator.sptep);
+
+ 
+
+       if (!is_shadow_present_pte(*iterator.sptep)) { //如果设置的页表之前的页表项为空，那么要建立页表
+
+           u64 base_addr = iterator.addr;
+
+ 
+
+           base_addr &= PT64_LVL_ADDR_MASK(iterator.level);
+
+           pseudo_gfn = base_addr >> PAGE_SHIFT;
+
+           sp = kvm_mmu_get_page(vcpu, pseudo_gfn, iterator.addr,
+
+                       iterator.level - 1,
+
+                        1,ACC_ALL, iterator.sptep); 分配一个新的页表
+
+ 
+
+           link_shadow_page(iterator.sptep, sp, true);
+
+       }
+
+    }
+
+    return emulate;
+
+}
+
+__direct_map 这个函数是根据传进来的gpa进行计算，从第4级（level-4）页表页开始，一级一级地填写相应页表项，这些都是在for_each_shadow_entry(vcpu, (u64)gfn << PAGE_SHIFT, iterator) 这个宏定义里面实现的.这两种情况是这样子的:
+
+第一种情况是指如果当前页表页的层数（iterator.level ）是最后一层（ level ）的页表页，那么直接通过调用 mmu_set_spte （之后会细讲）设置页表项。
+
+第二种情况是指如果当前页表页 A 不是最后一层，而是中间某一层（leve-4, level-3, level-2)，而且该页表项之前并没有初始化（!is_shadow_present_pte(*iterator.sptep) ），那么需要调用kvm_mmu_get_page 得到或者新建一个页表页 B ，然后通过 link_shadow_page 将其link到页表页 A 相对应的页表项中
+
+ 
+
+对于高层级的页表页，我们只需要调用link_shadow_page ，将页表项的值和相应的权限位直接设置上去就好了，但是对于最后一级的页表项，我们除了设置页表项对应的值之外，还需要做另一件事， rmap_add ：arch/x86/kvm/mmu.c
+
+static void mmu_set_spte(...)
+
+{
+
+  ...
+
+  if (set_spte(vcpu, sptep, pte_access, level,gfn, pfn, speculative,
+
+        true, host_writable)) {
+
+    ...
+
+  }
+
+  ...
+
+  if (is_shadow_present_pte(*sptep)) {
+
+    if (!was_rmapped) {
+
+      rmap_count = rmap_add(vcpu, sptep, gfn);
+
+      ...
+
+    }
+
+  }
+
+ 
+
+  ...
+
+}
+
+ 
+
+static int rmap_add(structkvm_vcpu *vcpu, u64 *spte, gfn_t gfn)
+
+{
+
+  ...
+
+  sp = page_header(__pa(spte));
+
+  kvm_mmu_page_set_gfn(sp, spte - sp->spt,gfn);
+
+  rmapp = gfn_to_rmap(vcpu->kvm, gfn,sp->role.level);
+
+  return pte_list_add(vcpu, spte, rmapp);
+
+}
+
+ 
+
+(3) EPT遍历操作
+
+```
+#definefor_each_shadow_entry(_vcpu, _addr, _walker)   \
+
+    for (shadow_walk_init(&(_walker), _vcpu, _addr); \
+
+         shadow_walk_okay(&(_walker));        \
+
+        shadow_walk_next(&(_walker)))
+
+ 
+
+structkvm_shadow_walk_iterator {
+
+    u64 addr;
+
+    hpa_t shadow_addr;
+
+    u64 *sptep;
+
+    int level;
+
+    unsigned index;
+
+};
+```
+ 
+
+遍历开始时(shadow_walk_init）
+
+    iterator->addr = addr;
+
+    iterator->shadow_addr = vcpu->arch.mmu.root_hpa;
+
+    iterator->level = vcpu->arch.mmu.shadow_root_level;
+
+ 
+
+取当前项的值，shadow_walk_okay
+
+    iterator->index= SHADOW_PT_INDEX(iterator->addr, iterator->level);
+
+    iterator->sptep   = ((u64 *)__va(iterator->shadow_addr)) +iterator->index;
+
+ 
+
+取下一项
+
+__shadow_walk_next：
+
+    iterator->shadow_addr= spte & PT64_BASE_ADDR_MASK;
+
+    --iterator->level;
+
+3.3.5 Sync page
+
+(1) mmu_sync_roots
+
+  从root_hpa开始调用mmu_sync_children
+
+  mmu_unsync_walk(struct kvm_mmu_page *sp, structkvm_mmu_pages *pvec)
+
+a)  mmu_unsync_walk得到所有子sp  将这些sp都加入到pvec中
+
+b)  for_each_sp(pages,sp, parents, i) //对pvec中的页面(不包括用于page dir的page)
+
+protected |=rmap_write_protect(vcpu->kvm, sp->gfn); // 计算该页和他的page dir是否有一个为write protected
+
+c)  if(protected)
+
+kvm_flush_remote_tlbs(vcpu->kvm);
+
+d)  for_each_sp(pages,sp, parents, i) {
+
+kvm_sync_page(vcpu, sp, &invalid_list);//同步page
+
+mmu_pages_clear_parents(&parents); //遍历减少unsync_children
+
+       i.     }
+
+e)  kvm_mmu_commit_zap_page(vcpu->kvm,&invalid_list); //释放invalid_list中的页
+
+ 
+
+(2） kvm_sync_page==> __kvm_sync_page时 clear_unsync 设为true
+
+static int__kvm_sync_page(struct kvm_vcpu *vcpu, struct kvm_mmu_page *sp,
+
+              struct list_head*invalid_list, bool clear_unsync)
+
+ 
+
+a. if (clear_unsync)
+
+       kvm_unlink_unsync_page(vcpu->kvm, sp); //sp->unsync = 0;
+
+b. if (vcpu->arch.mmu.sync_page(vcpu, sp)) {
+
+       kvm_mmu_prepare_zap_page(vcpu->kvm, sp, invalid_list);
+
+ 
+
+(3) kvm_mmu_prepare_zap_page
+
+a)  ret =mmu_zap_unsync_children(kvm, sp, invalid_list);
+
+通过mmu_unsync_walk; for_each_sp， 对所有sp进行如下操作
+
+kvm_mmu_prepare_zap_pag; mmu_pages_clear_parents
+
+b)  kvm_mmu_page_unlink_children
+
+对sp所指向的页做mmu_page_zap_pte==>drop_parent_pte
+
+c)  kvm_mmu_unlink_parents:
+
+if (sp->unsync)
+
+kvm_unlink_unsync_page(kvm, sp);//sp->unsync=0
+
+d)  如果free 了root则 将页移入invalid_list
+
+不是则移入kvm->arch.active_mmu_pages)
+
+对所有指向sp的页框做drop_parent_pte
+
+ 
+
+(4) unsync的设置时机
+
+__direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 kvm_unsync_pages  ==》 __kvm_unsync_page==》kvm_mmu_mark_parents_unsync
 
 
 
+# 13. 逆向映射机制
 
-# 11. 逆向映射机制
+有两个很重要的函数：
 
+mmu_page_add_parent_pte
+mmu_set_spte
 
-# 12. 参考
+# 14. 参考
 
 https://www.cnblogs.com/ck1020/p/6043054.html
 
