--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2735,8 +2735,12 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 
 有两个很重要的函数：
 
-mmu_page_add_parent_pte
-mmu_set_spte
+- `mmu_page_add_parent_pte`
+- `mmu_set_spte`
+
+其实它们都和reverse map有关
+
+首先，对于低层级（level-3 to level-1）的页表页结构 kvm_mmu_page，我们需要设置上一级的相应的页表项地址，然后通过 `mmu_page_add_parent_pte` 设置其`parent_pte`的reverse map：
 
 # 14. 参考
 
