--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2744,8 +2744,11 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 
 ....
 
-linux下根据**虚拟地址**经过**页表转换**得到**物理地址**。怎么根据物理地址得到对应的虚拟地址呢？这里便用到了逆向映射。逆向映射有什么用呢？最重要的，在页面换出时，由于物理内存的管理由一套相对独立的机制在负责，根据物理页面的活跃程度，对物理页面进行换出，而此时就需要更新引用了此页面的页表了，否则造成不同步而出错。如果获取对应的物理页面对应的pte的地址呢？内核的做法是先通过逆向映射得到虚拟地址，根据虚拟地址遍历页表得到pte地址。
+linux下根据**虚拟地址**经过**页表转换**得到**物理地址**。怎么根据**物理地址**得到对应的**虚拟地址**呢？这里便用到了**逆向映射**。逆向映射有什么用呢？最重要的，在**页面换出**时，由于**物理内存的管理**由一套**相对独立的机制在负责**，根据**物理页面的活跃程度**，对**物理页面**进行**换出**，而此时就需要**更新引用了此页面的页表**了，否则造成**不同步而出错**。如果获取**对应的物理页面**对应的**pte的地址**呢？内核的做法是先通过**逆向映射**得到**虚拟地址**，根据虚拟地址**遍历页表**得到pte地址。
 
+在KVM中，逆向映射机制的作用是类似的，但是完成的却**不是**从**HPA**到**对应的EPT页表项**的定位，而是从**gfn**到**对应的页表项**的定位。**理论**上讲根据**gfn**一步步**遍历EPT**也未尝不可，但是**效率较低**；况且在**EPT**所维护的**页面不同于host的页表**，理论上讲是**虚拟机之间**是**禁止主动的共享内存**的，为了提高效率，就有了**当前的逆向映射机制**。
+
+**虚拟机**的**物理内存**由**多个slot**构成，**每个slot**都是一个`kvm_memory_slot`结构，表示**虚拟机物理内存的一段空间**
 
 # 14. 参考
 
