--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2748,7 +2748,9 @@ linux下根据**虚拟地址**经过**页表转换**得到**物理地址**。怎
 
 在KVM中，逆向映射机制的作用是类似的，但是完成的却**不是**从**HPA**到**对应的EPT页表项**的定位，而是从**gfn**到**对应的页表项**的定位。**理论**上讲根据**gfn**一步步**遍历EPT**也未尝不可，但是**效率较低**；况且在**EPT**所维护的**页面不同于host的页表**，理论上讲是**虚拟机之间**是**禁止主动的共享内存**的，为了提高效率，就有了**当前的逆向映射机制**。
 
-**虚拟机**的**物理内存**由**多个slot**构成，**每个slot**都是一个`kvm_memory_slot`结构，表示**虚拟机物理内存的一段空间**
+**虚拟机**的**物理内存**由**多个slot**构成，**每个slot**都是一个`kvm_memory_slot`结构，表示**虚拟机物理内存的一段空间**.
+
+`kvm_memory_slot`本质是**qemu进程用户空间的hva**, 仅仅是qemu进程的虚拟地址空间，并**没有对应物理地址**，各个字段的意义不言自明了。其中有一个`kvm_arch_memory_slot`结构，我们重点描述。
 
 # 14. 参考
 
