--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -153,6 +153,10 @@ struct kvm_memory_slot {
 
 众所周知，**KVM虚拟机**运行在**qemu的进程地址空间**中，所以其实**虚拟机使用的物理地址**是从对应**qemu进程的地址空间中分配**的。
 
+`kvm_memory_slot`本质是**qemu进程用户空间的hva**, 仅仅是qemu进程的虚拟地址空间，并**没有对应物理地址**，各个字段的意义不言自明了。其中有一个`kvm_arch_memory_slot`结构，我们重点描述。
+
+该结构的rmap字段是指针数组，每种页面大小对应一项，截止3.10.1版本，KVM的大页面仅仅支持2M而并没有考虑1G的页面，普通的页面就是4KB了。所以默认状态下，提到大页面就是指的2M的页面。结合上面的kvm_memory_slot结构可以发现，kvm_arch_memory_slot其实是kvm_memory_slot的一个内嵌结构，所以**每个slot**都关联一个`kvm_arch_memory_slot`，也就有一个rmap数组。其实在虚拟机中，qemu为虚拟机分配的页面主要是大页面，但是这里为了方面，按照4KB的普通页面做介绍。
+
 虚拟机**线性地址！！！** 被分成若干个`kvm_memory_slot`，**每个memslot**是**不能重叠**的，也就是说**每一段内存区间**都必须有**独立的作用**。一般来说**Qemu**会对**RAM**、**IO memory**、**High memory**等**分别注册若干个memslot**
 
 而**每个虚拟机**的**物理内存**由**多个slot**组成，**每个slot**对应一个`kvm_memory_slot`结构，从结构体的字段可以看出，该结构记录**slot映射**的是**哪些客户物理page**，由于**映射多个页面**，所以有一个`ditty_bitmap`来标识**各个页的状态**，注意这个页是客户机的虚拟page。映射架构如下：
