--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第6章 KVM设备高级管理/1. 半虚拟化驱动.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第6章 KVM设备高级管理/1. 半虚拟化驱动.md
@@ -14,7 +14,7 @@
     - [4.1.1. virtio相关内核配置](#411-virtio相关内核配置)
     - [4.1.2. virtio内核模块](#412-virtio内核模块)
   - [4.2. Windows客户机中的virtio驱动](#42-windows客户机中的virtio驱动)
-- [5. 使用virtio\_balloon](#5-使用virtio_balloon)
+- [5. 使用virtio_balloon](#5-使用virtio_balloon)
   - [5.1. ballooning简介](#51-ballooning简介)
   - [5.2. KVM中ballooning的原理及优劣势](#52-kvm中ballooning的原理及优劣势)
     - [5.2.1. KVM中原理](#521-kvm中原理)
@@ -231,7 +231,7 @@ Formatting 'win10.img', fmt=raw size=107374182400￼
 
 安装过程中我们选择“自定义”安装，如图6-4所示。
 
-# 5. 使用virtio\_balloon
+# 5. 使用virtio_balloon
 
 ## 5.1. ballooning简介
 
