--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/2. 使用Local APIC.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/2. 使用Local APIC.md
@@ -3,12 +3,12 @@
 
 <!-- code_chunk_output -->
 
-* [1 检测local APIC版本](#1-检测local-apic版本)
-	* [1.1 检测是否支持x2APIC](#11-检测是否支持x2apic)
-* [2 开启和关闭local APIC](#2-开启和关闭local-apic)
-	* [2.1 global enable/disable APIC](#21-global-enabledisable-apic)
-	* [2.2 software enable/disable APIC](#22-software-enabledisable-apic)
-	* [2.3 开启x2APIC模式](#23-开启x2apic模式)
+- [1 检测local APIC版本](#1-检测local-apic版本)
+  - [1.1 检测是否支持x2APIC](#11-检测是否支持x2apic)
+- [2 开启和关闭local APIC](#2-开启和关闭local-apic)
+  - [2.1 global enable/disable APIC](#21-global-enabledisable-apic)
+  - [2.2 software enable/disable APIC](#22-software-enabledisable-apic)
+  - [2.3 开启x2APIC模式](#23-开启x2apic模式)
 
 <!-- /code_chunk_output -->
 
@@ -43,7 +43,7 @@ support_apic：
 
 ## 1.1 检测是否支持x2APIC
 
-使用**CPUID.01H：ECX[21]位**来检测**是否支持x2APIC**，如以下代码所示。
+使用`CPUID.01H：ECX[21]`位来检测**是否支持x2APIC**，如以下代码所示。
 
 代码清单18-2（lib\apic.asm）：
 
