--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -341,7 +341,7 @@ static long kvm_vm_ioctl(struct file *filp,
 
 ## 6.2. 基本流程
 
-```
+```cpp
 kvm_vm_ioctl() // kvm ioctl vm指令入口
     kvm_vm_ioctl_create_vcpu() // 为虚拟机创建VCPU的ioctl调用的入口函数
         kvm_arch_vcpu_precreate() // stable tsc检查
