--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -122,7 +122,7 @@ struct kvm_lpage_info {
 
 struct kvm_arch_memory_slot {
         // 反向映射结构（reverse map）
-        // 数组, 3个指针
+        // 数组, 3个指针, 每种页面
         struct kvm_rmap_head *rmap[KVM_NR_PAGE_SIZES];
         // Large page结构（如2MB、1GB大小页面）
         struct kvm_lpage_info *lpage_info[KVM_NR_PAGE_SIZES - 1];
@@ -155,7 +155,7 @@ struct kvm_memory_slot {
 
 `kvm_memory_slot`本质是**qemu进程用户空间的hva**, 仅仅是qemu进程的虚拟地址空间，并**没有对应物理地址**，各个字段的意义不言自明了。其中有一个`kvm_arch_memory_slot`结构，我们重点描述。
 
-该结构的rmap字段是指针数组，每种页面大小对应一项，截止3.10.1版本，KVM的大页面仅仅支持2M而并没有考虑1G的页面，普通的页面就是4KB了。所以默认状态下，提到大页面就是指的2M的页面。结合上面的kvm_memory_slot结构可以发现，kvm_arch_memory_slot其实是kvm_memory_slot的一个内嵌结构，所以**每个slot**都关联一个`kvm_arch_memory_slot`，也就有一个rmap数组。其实在虚拟机中，qemu为虚拟机分配的页面主要是大页面，但是这里为了方面，按照4KB的普通页面做介绍。
+该结构的**rmap字段**是指针数组，每种页面大小对应一项，KVM的大页面支持2M和1G的页面，普通的页面就是4KB了。所以默认状态下，提到大页面就是指的2M的页面。结合上面的kvm_memory_slot结构可以发现，kvm_arch_memory_slot其实是kvm_memory_slot的一个内嵌结构，所以**每个slot**都关联一个`kvm_arch_memory_slot`，也就有一个rmap数组。其实在虚拟机中，qemu为虚拟机分配的页面主要是大页面，但是这里为了方面，按照4KB的普通页面做介绍。
 
 虚拟机**线性地址！！！** 被分成若干个`kvm_memory_slot`，**每个memslot**是**不能重叠**的，也就是说**每一段内存区间**都必须有**独立的作用**。一般来说**Qemu**会对**RAM**、**IO memory**、**High memory**等**分别注册若干个memslot**
 
