--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -98,37 +98,6 @@ static struct kvm_memslots *kvm_alloc_memslots(void)
 由于**GPA不能直接用于物理 MMU 进行寻址！！！**，所以需要**将GPA转换为HVA**，kvm中利用 `kvm_memory_slot` 数据结构来记录**每一个地址区间**(**Guest中的物理地址区间**)中**GPA与HVA**的**映射关系**.
 
 ```cpp
-/* KVM Hugepage definitions for x86 */
-enum {
-        // 页面的起始地址在 页表(PT) 中
-        PT_PAGE_TABLE_LEVEL   = 1,
-        // 2M大页(2^20), 页面的起始地址在 页目录项(PDE) 中
-        PT_DIRECTORY_LEVEL    = 2,
-        // 1G大页(2^30), 页面的起始地址在 页目录指针项(PDPE) 中
-        PT_PDPE_LEVEL         = 3,
-        /* set max level to the biggest one */
-        PT_MAX_HUGEPAGE_LEVEL = PT_PDPE_LEVEL,
-};
-// 这里是3
-#define KVM_NR_PAGE_SIZES       (PT_MAX_HUGEPAGE_LEVEL - \
-                                 PT_PAGE_TABLE_LEVEL + 1)
-struct kvm_rmap_head {
-        unsigned long val;
-};
-
-struct kvm_lpage_info {
-        int disallow_lpage;
-};
-
-struct kvm_arch_memory_slot {
-        // 反向映射结构（reverse map）
-        // 数组, 3个指针, 每种页面
-        struct kvm_rmap_head *rmap[KVM_NR_PAGE_SIZES];
-        // Large page结构（如2MB、1GB大小页面）
-        struct kvm_lpage_info *lpage_info[KVM_NR_PAGE_SIZES - 1];
-        unsigned short *gfn_track[KVM_PAGE_TRACK_MAX];
-};
-
 struct kvm_memory_slot {
         // 虚拟机物理地址(即GPA)对应的页框号, GPA
         // 等于: mem->guest_phys_addr >> PAGE_SHIFT;
@@ -153,15 +122,48 @@ struct kvm_memory_slot {
 
 众所周知，**KVM虚拟机**运行在**qemu的进程地址空间**中，所以其实**虚拟机使用的物理地址**是从对应**qemu进程的地址空间中分配**的。
 
-`kvm_memory_slot`本质是**qemu进程用户空间的hva**, 仅仅是qemu进程的虚拟地址空间，并**没有对应物理地址**，各个字段的意义不言自明了。其中有一个`kvm_arch_memory_slot`结构，我们重点描述。
-
-该结构的**rmap字段**是指针数组，每种页面大小对应一项，KVM的大页面支持2M和1G的页面，普通的页面就是4KB了。所以默认状态下，提到大页面就是指的2M的页面。结合上面的kvm_memory_slot结构可以发现，kvm_arch_memory_slot其实是kvm_memory_slot的一个内嵌结构，所以**每个slot**都关联一个`kvm_arch_memory_slot`，也就有一个rmap数组。其实在虚拟机中，qemu为虚拟机分配的页面主要是大页面，但是这里为了方面，按照4KB的普通页面做介绍。
-
 虚拟机**线性地址！！！** 被分成若干个`kvm_memory_slot`，**每个memslot**是**不能重叠**的，也就是说**每一段内存区间**都必须有**独立的作用**。一般来说**Qemu**会对**RAM**、**IO memory**、**High memory**等**分别注册若干个memslot**
 
 而**每个虚拟机**的**物理内存**由**多个slot**组成，**每个slot**对应一个`kvm_memory_slot`结构，从结构体的字段可以看出，该结构记录**slot映射**的是**哪些客户物理page**，由于**映射多个页面**，所以有一个`ditty_bitmap`来标识**各个页的状态**，注意这个页是客户机的虚拟page。映射架构如下：
 
 ![2020-03-17-16-17-51.png](./images/2020-03-17-16-17-51.png)
+
+`kvm_memory_slot`本质是**qemu进程用户空间的hva**, 仅仅是qemu进程的虚拟地址空间，并**没有对应物理地址**，各个字段的意义不言自明了。其中有一个`kvm_arch_memory_slot`结构，我们重点描述。
+
+```cpp
+/* KVM Hugepage definitions for x86 */
+enum {
+        // 页面的起始地址在 页表(PT) 中
+        PT_PAGE_TABLE_LEVEL   = 1,
+        // 2M大页(2^20), 页面的起始地址在 页目录项(PDE) 中
+        PT_DIRECTORY_LEVEL    = 2,
+        // 1G大页(2^30), 页面的起始地址在 页目录指针项(PDPE) 中
+        PT_PDPE_LEVEL         = 3,
+        /* set max level to the biggest one */
+        PT_MAX_HUGEPAGE_LEVEL = PT_PDPE_LEVEL,
+};
+// 这里是3
+#define KVM_NR_PAGE_SIZES       (PT_MAX_HUGEPAGE_LEVEL - \
+                                 PT_PAGE_TABLE_LEVEL + 1)
+struct kvm_rmap_head {
+        unsigned long val;
+};
+
+struct kvm_lpage_info {
+        int disallow_lpage;
+};
+
+struct kvm_arch_memory_slot {
+        // 反向映射结构（reverse map）
+        // 数组, 3个指针, 每种页面大小对应一项
+        struct kvm_rmap_head *rmap[KVM_NR_PAGE_SIZES];
+        // Large page结构（如2MB、1GB大小页面）
+        struct kvm_lpage_info *lpage_info[KVM_NR_PAGE_SIZES - 1];
+        unsigned short *gfn_track[KVM_PAGE_TRACK_MAX];
+};
+```
+
+该结构的**rmap字段**是指针数组，每种页面大小对应一项，KVM的大页面支持2M和1G的页面，普通的页面就是4KB了。结合上面的`kvm_memory_slot`结构可以发现，`kvm_arch_memory_slot`其实是`kvm_memory_slot`的一个**内嵌结构**，所以**每个slot**都关联一个`kvm_arch_memory_slot`，也就有一个**rmap数组**。其实在**虚拟机中**，**qemu**为虚拟机分配的页面主要是**大页面**，但是这里为了方面，按照4KB的普通页面做介绍。
 
 至于`kvm_userspace_memory_region`可以看qemu部分
 
