--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -40,6 +40,7 @@
   - [12.1. CR3寄存器](#121-cr3寄存器)
   - [12.2. handle_ept_violation](#122-handle_ept_violation)
 - [13. 逆向映射机制](#13-逆向映射机制)
+  - [初始化阶段](#初始化阶段)
 - [14. 参考](#14-参考)
 
 <!-- /code_chunk_output -->
@@ -2772,7 +2773,15 @@ struct kvm_arch_memory_slot {
 };
 ```
 
-该结构的rmap字段是指针数组，每种页面大小对应一项，截止3.10.1版本，KVM的大页面仅仅支持2M而并没有考虑1G的页面，普通的页面就是4KB了。所以默认状态下，提到大页面就是指的2M的页面。结合上面的kvm_memory_slot结构可以发现，kvm_arch_memory_slot其实是kvm_memory_slot的一个内嵌结构，所以每个slot都关联一个kvm_arch_memory_slot，也就有一个rmap数组。其实在虚拟机中，qemu为虚拟机分配的页面主要是大页面，但是这里为了方面，按照4KB的普通页面做介绍。
+该结构的**rmap字段**是指针数组，每种页面大小对应一项，KVM的大页面支持2M和1G的页面，普通的页面就是4KB了。结合上面的`kvm_memory_slot`结构可以发现，`kvm_arch_memory_slot`其实是`kvm_memory_slot`的一个**内嵌结构**，所以**每个slot**都关联一个`kvm_arch_memory_slot`，也就有一个**rmap数组**。其实在**虚拟机中**，**qemu**为虚拟机分配的页面主要是**大页面**，但是这里为了方面，按照4KB的普通页面做介绍。
+
+## 初始化阶段
+
+在qemu为虚拟机注册各个slot的时候，在KVM中会初始化逆向映射的相关内存区。`__kvm_set_memory_region`-->`kvm_arch_create_memslot`
+
+在该函数中，用一个for循环为每种页面类型的rmap分配空间，具体分配代码如下
+
+
 
 
 
