--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2777,7 +2777,9 @@ struct kvm_arch_memory_slot {
 
 ## 初始化阶段
 
-在qemu为虚拟机注册各个slot的时候，在KVM中会初始化逆向映射的相关内存区。`__kvm_set_memory_region`-->`kvm_arch_create_memslot`
+在qemu为虚拟机**注册各个slot**的时候，在KVM中会初始化逆向映射的相关内存区。
+
+`__kvm_set_memory_region` --> `kvm_arch_create_memslot`
 
 在该函数中，用一个for循环为每种页面类型的rmap分配空间，具体分配代码如下
 
