--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2779,11 +2779,41 @@ struct kvm_arch_memory_slot {
 
 在qemu为虚拟机**注册各个slot**的时候，在KVM中会初始化逆向映射的相关内存区。
 
-`__kvm_set_memory_region` --> `kvm_arch_create_memslot`
+`__kvm_set_memory_region` --> `kvm_alloc_memslot_metadata`
 
 在该函数中，用一个for循环为每种页面类型的rmap分配空间，具体分配代码如下
 
+```cpp
+static int kvm_alloc_memslot_metadata(struct kvm_memory_slot *slot,
+                                      unsigned long npages)
+{
+        int i;
 
+        /*
+         * Clear out the previous array pointers for the KVM_MR_MOVE case.  The
+         * old arrays will be freed by __kvm_set_memory_region() if installing
+         * the new memslot is successful.
+         */
+        // 重置这个kvm_memory_slot的arch
+        memset(&slot->arch, 0, sizeof(slot->arch));
+
+        for (i = 0; i < KVM_NR_PAGE_SIZES; ++i) {
+                struct kvm_lpage_info *linfo;
+                unsigned long ugfn;
+                int lpages;
+                int level = i + 1;
+                // 一级页表所需的pages数目
+                lpages = gfn_to_index(slot->base_gfn + npages - 1,
+                                      slot->base_gfn, level) + 1;
+                // rmap, 反向映射结构
+                slot->arch.rmap[i] =
+                        kvcalloc(lpages, sizeof(*slot->arch.rmap[i]),
+                                 GFP_KERNEL_ACCOUNT);
+                if (!slot->arch.rmap[i])
+                        goto out_free;
+```
+
+`gfn_to_index`把**一个gfn**转化成**该gfn**在整个slot中的索引，而这里获取的其实就是整个slot包含的不同level的页面数。然后为slot->arch.rmap[i]分配内存，每个页面对应一个unsigned Long.
 
 
 
