--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -41,6 +41,7 @@
   - [12.2. handle_ept_violation](#122-handle_ept_violation)
 - [13. 逆向映射机制](#13-逆向映射机制)
   - [初始化阶段](#初始化阶段)
+  - [建立阶段](#建立阶段)
 - [14. 参考](#14-参考)
 
 <!-- /code_chunk_output -->
@@ -427,6 +428,7 @@ enum {
         /* set max level to the biggest one */
         PT_MAX_HUGEPAGE_LEVEL = PT_PDPE_LEVEL,
 };
+// 3
 #define KVM_NR_PAGE_SIZES       (PT_MAX_HUGEPAGE_LEVEL - \
                                  PT_PAGE_TABLE_LEVEL + 1)
 
@@ -2813,7 +2815,10 @@ static int kvm_alloc_memslot_metadata(struct kvm_memory_slot *slot,
                         goto out_free;
 ```
 
-`gfn_to_index`把**一个gfn**转化成**该gfn**在整个slot中的索引，而这里获取的其实就是整个slot包含的不同level的页面数。然后为slot->arch.rmap[i]分配内存，每个页面对应一个unsigned Long.
+`gfn_to_index`把**一个gfn**转化成**该gfn**在**整个slot**中的**索引**，而这里获取的其实就是**整个slot**包含的**不同level**的**页面数**。然后为`slot->arch.rmap[i]`分配内存，**每个页面**对应一个**unsigned Long**.
+
+## 建立阶段
+
 
 
 
