--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -163,7 +163,7 @@ struct kvm_arch_memory_slot {
 };
 ```
 
-该结构的**rmap字段**是指针数组，每种页面大小对应一项，KVM的大页面支持2M和1G的页面，普通的页面就是4KB了。结合上面的`kvm_memory_slot`结构可以发现，`kvm_arch_memory_slot`其实是`kvm_memory_slot`的一个**内嵌结构**，所以**每个slot**都关联一个`kvm_arch_memory_slot`，也就有一个**rmap数组**。其实在**虚拟机中**，**qemu**为虚拟机分配的页面主要是**大页面**，但是这里为了方面，按照4KB的普通页面做介绍。
+该结构的**rmap字段**是指针数组，每种页面大小对应一项，KVM的大页面支持2M和1G的页面，普通的页面就是4KB了。结合上面的`kvm_memory_slot`结构可以发现，`kvm_arch_memory_slot`其实是`kvm_memory_slot`的一个**内嵌结构**，所以**每个slot**都关联一个`kvm_arch_memory_slot`，也就有一个**rmap数组**。其实在**虚拟机中**，**qemu**为虚拟机分配的页面主要是**大页面**。
 
 至于`kvm_userspace_memory_region`可以看qemu部分
 
