--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -40,8 +40,8 @@
   - [12.1. CR3寄存器](#121-cr3寄存器)
   - [12.2. handle_ept_violation](#122-handle_ept_violation)
 - [13. 逆向映射机制](#13-逆向映射机制)
-  - [初始化阶段](#初始化阶段)
-  - [建立阶段](#建立阶段)
+  - [初始化阶段: 注册各个slot时](#初始化阶段-注册各个slot时)
+  - [建立阶段:](#建立阶段)
 - [14. 参考](#14-参考)
 
 <!-- /code_chunk_output -->
@@ -2779,7 +2779,7 @@ struct kvm_arch_memory_slot {
 
 其实在**虚拟机中**，**qemu**为虚拟机分配的页面主要是**大页面**，但是这里为了方面，按照4KB的普通页面做介绍。
 
-## 初始化阶段
+## 初始化阶段: 注册各个slot时
 
 在qemu为虚拟机**注册各个slot**的时候，在KVM中会初始化逆向映射的相关内存区。
 
@@ -2817,9 +2817,14 @@ static int kvm_alloc_memslot_metadata(struct kvm_memory_slot *slot,
                         goto out_free;
 ```
 
-`gfn_to_index`把**一个gfn**转化成**该gfn**在**整个slot**中的**索引**，而这里获取的其实就是**整个slot**包含的**不同level**的**页面数**。然后为`slot->arch.rmap[i]`分配内存，**每个页面**对应一个**unsigned Long**.
+`gfn_to_index`把**一个gfn**转化成**该gfn**在**整个slot**中的**索引**，而这里获取的其实就是**整个slot**包含的**不同level**的**页面数**。
 
-## 建立阶段
+然后为`slot->arch.rmap[i]`分配内存，**每个页面**对应一个**unsigned Long**.
+
+## 建立阶段: 
+
+建立阶段自然是在**填充EPT的时候**了，在KVM中维护EPT的核心函数是`tdp_page_fault`函数。该函数的处理在之前的文章中也有介绍，在函数尾部会调用rmap_add函数建立逆向映射
+
 
 
 
