--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -41,7 +41,7 @@
   - [12.2. handle_ept_violation](#122-handle_ept_violation)
 - [13. 逆向映射机制](#13-逆向映射机制)
   - [初始化阶段: 注册各个slot时](#初始化阶段-注册各个slot时)
-  - [建立阶段:](#建立阶段)
+  - [建立阶段: 填充EPT](#建立阶段-填充ept)
 - [14. 参考](#14-参考)
 
 <!-- /code_chunk_output -->
@@ -2821,9 +2821,9 @@ static int kvm_alloc_memslot_metadata(struct kvm_memory_slot *slot,
 
 然后为`slot->arch.rmap[i]`分配内存，**每个页面**对应一个**unsigned Long**.
 
-## 建立阶段: 
+## 建立阶段: 填充EPT
 
-建立阶段自然是在**填充EPT的时候**了，在KVM中维护EPT的核心函数是`tdp_page_fault`函数。该函数的处理在之前的文章中也有介绍，在函数尾部会调用rmap_add函数建立逆向映射
+建立阶段自然是在**填充EPT的时候**了，在KVM中维护EPT的核心函数是`tdp_page_fault`函数。在函数尾部会调用`rmap_add`函数建立逆向映射
 
 
 
