--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2823,7 +2823,7 @@ static int kvm_alloc_memslot_metadata(struct kvm_memory_slot *slot,
 
 ## 建立阶段: 填充EPT
 
-建立阶段自然是在**填充EPT的时候**了，在KVM中维护EPT的核心函数是`tdp_page_fault`函数。在函数尾部会调用`rmap_add`函数建立逆向映射
+建立阶段自然是在**填充EPT的时候**了，在KVM中维护EPT的核心函数是`kvm_tdp_page_fault`函数。在函数尾部会调用`rmap_add`函数建立逆向映射
 
 
 
