--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -1,4 +1,3 @@
-
 <!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
 <!-- code_chunk_output -->
@@ -9,7 +8,7 @@
 - [4. kvm中与mmu相关成员](#4-kvm中与mmu相关成员)
 - [5. kvm_vcpu中与mmu相关成员](#5-kvm_vcpu中与mmu相关成员)
 - [6. kvm_mmu 结构体: vMMU数据结构](#6-kvm_mmu-结构体-vmmu数据结构)
-- [7. kvm_mmu_page: 影子页表页](#7-kvm_mmu_page-影子页表页)
+- [7. kvm_mmu_page: 一个层级的影子页表页](#7-kvm_mmu_page-一个层级的影子页表页)
 - [8. 参考](#8-参考)
 
 <!-- /code_chunk_output -->
@@ -447,7 +446,7 @@ union kvm_mmu_page_role {
 };
 ```
 
-# 7. kvm_mmu_page: 影子页表页
+# 7. kvm_mmu_page: 一个层级的影子页表页
 
 由于**gpa**对应的**hva已经存在**, 所以可以直接根据**gpa得到hpa**, `gfn_to_pfn`函数实现了这个功能. 但**该页**对应的**ept页表内存**却并未分配,所以kvm需要管理分页内存和页面映射. 为此kvm引入了`kvm_mmu_page`结构。
 
