--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2823,7 +2823,23 @@ static int kvm_alloc_memslot_metadata(struct kvm_memory_slot *slot,
 
 ## 建立阶段: 填充EPT
 
-建立阶段自然是在**填充EPT的时候**了，在KVM中维护EPT的核心函数是`kvm_tdp_page_fault`函数。在函数尾部会调用`rmap_add`函数建立逆向映射
+建立阶段自然是在**填充EPT的时候**了，在KVM中维护EPT的核心函数是`kvm_tdp_page_fault`函数。在函数尾部(`__direct_map`尾部的`mmu_set_spte`中)会调用`rmap_add`函数建立逆向映射
+
+```cpp
+static int rmap_add(struct kvm_vcpu *vcpu, u64 *spte, gfn_t gfn)
+{
+        struct kvm_mmu_page *sp;
+        struct kvm_rmap_head *rmap_head;
+
+        sp = page_header(__pa(spte));
+        kvm_mmu_page_set_gfn(sp, spte - sp->spt, gfn);
+        rmap_head = gfn_to_rmap(vcpu->kvm, gfn, sp);
+        return pte_list_add(vcpu, spte, rmap_head);
+}
+```
+
+`page_header`是一个**内联函数**，主要目的在于获取`kvm_mmu_page`，一个该结构描述**一个层级的页表**，**地址**保存在**page结构**的**private字段**，然后调用`kvm_mmu_page_set_gfn`，对`kvm_mmu_page进行设置。这不是重点，接着就获取了gfn对应的rmap的地址，重点看下
+
 
 
 
