--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2830,15 +2830,16 @@ static int rmap_add(struct kvm_vcpu *vcpu, u64 *spte, gfn_t gfn)
 {
         struct kvm_mmu_page *sp;
         struct kvm_rmap_head *rmap_head;
-
+        // 获取该页表项对应的页表页
         sp = page_header(__pa(spte));
         kvm_mmu_page_set_gfn(sp, spte - sp->spt, gfn);
+        // gfn对应的rmap地址
         rmap_head = gfn_to_rmap(vcpu->kvm, gfn, sp);
         return pte_list_add(vcpu, spte, rmap_head);
 }
 ```
 
-`page_header`是一个**内联函数**，主要目的在于获取`kvm_mmu_page`，一个该结构描述**一个层级的页表**，**地址**保存在**page结构**的**private字段**，然后调用`kvm_mmu_page_set_gfn`，对`kvm_mmu_page进行设置。这不是重点，接着就获取了gfn对应的rmap的地址，重点看下
+`page_header`是一个**内联函数**，主要目的在于获取`kvm_mmu_page`，一个该结构描述**一个层级的页表**，**地址**保存在**page结构**的**private字段**，然后调用`kvm_mmu_page_set_gfn`，对`kvm_mmu_page`进行设置。这不是重点，接着就获取了**gfn对应的rmap的地址**，重点看下
 
 
 
