--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -512,7 +512,7 @@ struct kvm_mmu_page {
 
 页分为**两类**，**物理页**和**页表页**，而**页表页**本身也被分为**两类**，**高层级（level-4 to level-2）的页表页**，和**最后一级（level-1）的页表页**。
 
-影子页表页，shadow page，就是**装载影子页表**的**页面**，**每个页面**中分为**多个表项**，**每个表项**称为**spte**，注意不论哪个级别，表项都称为spte。
+影子页表页，shadow page，就是**装载影子页表项**的**页面**，**每个页面**中分为**多个表项**，**每个表项**称为**spte**，注意不论哪个级别，表项都称为spte。一个该结构描述**一个层级的页表**.
 
 ![2020-03-30-17-16-04.png](./images/2020-03-30-17-16-04.png)
 
