--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2832,6 +2832,7 @@ static int rmap_add(struct kvm_vcpu *vcpu, u64 *spte, gfn_t gfn)
         struct kvm_rmap_head *rmap_head;
         // 获取该页表项对应的页表页
         sp = page_header(__pa(spte));
+        // 设置该页表页的这个页表页项
         kvm_mmu_page_set_gfn(sp, spte - sp->spt, gfn);
         // gfn对应的rmap地址
         rmap_head = gfn_to_rmap(vcpu->kvm, gfn, sp);
@@ -2840,6 +2841,19 @@ static int rmap_add(struct kvm_vcpu *vcpu, u64 *spte, gfn_t gfn)
 ```
 
 `page_header`是一个**内联函数**，主要目的在于获取`kvm_mmu_page`，一个该结构描述**一个层级的页表**，**地址**保存在**page结构**的**private字段**，然后调用`kvm_mmu_page_set_gfn`，对`kvm_mmu_page`进行设置。这不是重点，接着就获取了**gfn对应的rmap的地址**，重点看下
+
+```cpp
+static struct kvm_rmap_head *gfn_to_rmap(struct kvm *kvm, gfn_t gfn,
+                                         struct kvm_mmu_page *sp)
+{
+        struct kvm_memslots *slots;
+        struct kvm_memory_slot *slot;
+
+        slots = kvm_memslots_for_spte_role(kvm, sp->role);
+        slot = __gfn_to_memslot(slots, gfn);
+        return __gfn_to_rmap(gfn, sp->role.level, slot);
+}
+```
 
 
 
