--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2832,7 +2832,7 @@ static int rmap_add(struct kvm_vcpu *vcpu, u64 *spte, gfn_t gfn)
         struct kvm_rmap_head *rmap_head;
         // 获取该页表项对应的页表页
         sp = page_header(__pa(spte));
-        // 设置该页表页的这个页表页项
+        // 设置该页表页
         kvm_mmu_page_set_gfn(sp, spte - sp->spt, gfn);
         // gfn对应的rmap地址
         rmap_head = gfn_to_rmap(vcpu->kvm, gfn, sp);
@@ -2848,12 +2848,15 @@ static struct kvm_rmap_head *gfn_to_rmap(struct kvm *kvm, gfn_t gfn,
 {
         struct kvm_memslots *slots;
         struct kvm_memory_slot *slot;
-
+        // 
         slots = kvm_memslots_for_spte_role(kvm, sp->role);
+        // 获取该gfn对应的slot
         slot = __gfn_to_memslot(slots, gfn);
         return __gfn_to_rmap(gfn, sp->role.level, slot);
 }
 ```
+
+首先转化成到对应的slot，然后调用了`__gfn_to_rmap`
 
 
 
