--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2817,7 +2817,7 @@ static int kvm_alloc_memslot_metadata(struct kvm_memory_slot *slot,
                         goto out_free;
 ```
 
-`gfn_to_index`把**一个gfn**转化成**该gfn**在**整个slot**中的**索引**，而这里获取的其实就是**整个slot**包含的**不同level**的**页面数**。
+`gfn_to_index`把**一个gfn**转化成**该gfn**在**这个slot**中的**索引**，而这里获取的其实就是**整个slot**包含的**不同level**的**页面数**。
 
 然后为`slot->arch.rmap[i]`分配内存，**每个页面**对应一个**unsigned Long**.
 
@@ -2852,13 +2852,26 @@ static struct kvm_rmap_head *gfn_to_rmap(struct kvm *kvm, gfn_t gfn,
         slots = kvm_memslots_for_spte_role(kvm, sp->role);
         // 获取该gfn对应的slot
         slot = __gfn_to_memslot(slots, gfn);
+        
         return __gfn_to_rmap(gfn, sp->role.level, slot);
 }
 ```
 
 首先转化成到对应的slot，然后调用了`__gfn_to_rmap`
 
+```cpp
+static struct kvm_rmap_head *__gfn_to_rmap(gfn_t gfn, int level,
+                                           struct kvm_memory_slot *slot)
+{
+        unsigned long idx;
+        /*gfn在slot中的index*/
+        idx = gfn_to_index(gfn, slot->base_gfn, level);
+        /*rmap是一个指针数组，每个项记录对应层级的gfn对应的逆向映射，index就是下标*/
+        return &slot->arch.rmap[level - PT_PAGE_TABLE_LEVEL][idx];
+}
+```
 
+再次看到了`gfn_to_index`函数，这里就**根据指定的gfn转化成索引**，同时也是在**rmap数组的下标**，然后就**返回对应的表项的地址**，没啥好说的吧……现在地址已经获取到了，还等什么呢？设置吧，调用`pte_list_add`函数，该函数也值得一说
 
 
 
