--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -42,6 +42,8 @@
 - [13. 逆向映射机制](#13-逆向映射机制)
   - [初始化阶段: 注册各个slot时](#初始化阶段-注册各个slot时)
   - [建立阶段: 填充EPT](#建立阶段-填充ept)
+    - [gfn_to_rmap(): 获取gfn对应的rmap地址](#gfn_to_rmap-获取gfn对应的rmap地址)
+    - [pte_list_add(): 设置rmap](#pte_list_add-设置rmap)
 - [14. 参考](#14-参考)
 
 <!-- /code_chunk_output -->
@@ -2836,11 +2838,16 @@ static int rmap_add(struct kvm_vcpu *vcpu, u64 *spte, gfn_t gfn)
         kvm_mmu_page_set_gfn(sp, spte - sp->spt, gfn);
         // gfn对应的rmap地址
         rmap_head = gfn_to_rmap(vcpu->kvm, gfn, sp);
+        // 设置逆向映射
         return pte_list_add(vcpu, spte, rmap_head);
 }
 ```
 
-`page_header`是一个**内联函数**，主要目的在于获取`kvm_mmu_page`，一个该结构描述**一个层级的页表**，**地址**保存在**page结构**的**private字段**，然后调用`kvm_mmu_page_set_gfn`，对`kvm_mmu_page`进行设置。这不是重点，接着就获取了**gfn对应的rmap的地址**，重点看下
+`page_header`是一个**内联函数**，主要目的在于获取`kvm_mmu_page`，一个该结构描述**一个层级的页表**，**地址**保存在**page结构**的**private字段**，然后调用`kvm_mmu_page_set_gfn`，对`kvm_mmu_page`进行设置。
+
+接着就获取了**gfn对应的rmap的地址**，重点看下
+
+### gfn_to_rmap(): 获取gfn对应的rmap地址
 
 ```cpp
 static struct kvm_rmap_head *gfn_to_rmap(struct kvm *kvm, gfn_t gfn,
@@ -2873,7 +2880,50 @@ static struct kvm_rmap_head *__gfn_to_rmap(gfn_t gfn, int level,
 
 再次看到了`gfn_to_index`函数，这里就**根据指定的gfn转化成索引**，同时也是在**rmap数组的下标**，然后就**返回对应的表项的地址**，没啥好说的吧……现在地址已经获取到了，还等什么呢？设置吧，调用`pte_list_add`函数，该函数也值得一说
 
+### pte_list_add(): 设置rmap
 
+```cpp
+/*
+ * Returns the number of pointers in the rmap chain, not counting the new one.
+ */
+static int pte_list_add(struct kvm_vcpu *vcpu, u64 *spte,
+                        struct kvm_rmap_head *rmap_head)
+{
+        struct pte_list_desc *desc;
+        int i, count = 0;
+
+        if (!rmap_head->val) {
+                rmap_printk("pte_list_add: %p %llx 0->1\n", spte, *spte);
+                rmap_head->val = (unsigned long)spte;
+        } else if (!(rmap_head->val & 1)) {
+                rmap_printk("pte_list_add: %p %llx 1->many\n", spte, *spte);
+                desc = mmu_alloc_pte_list_desc(vcpu);
+                desc->sptes[0] = (u64 *)rmap_head->val;
+                desc->sptes[1] = spte;
+                rmap_head->val = (unsigned long)desc | 1;
+                ++count;
+        } else {
+                rmap_printk("pte_list_add: %p %llx many->many\n", spte, *spte);
+                desc = (struct pte_list_desc *)(rmap_head->val & ~1ul);
+                while (desc->sptes[PTE_LIST_EXT-1] && desc->more) {
+                        desc = desc->more;
+                        count += PTE_LIST_EXT;
+                }
+                if (desc->sptes[PTE_LIST_EXT-1]) {
+                        desc->more = mmu_alloc_pte_list_desc(vcpu);
+                        desc = desc->more;
+                }
+                for (i = 0; desc->sptes[i]; ++i)
+                        ++count;
+                desc->sptes[i] = spte;
+        }
+        return count;
+}
+```
+
+先走下函数流程，我们已经传递进来gfn对应的rmap的地址，就是`rmap_head`，接下来主要分为三部分；if……else if ……else
+
+首先，如果`*rmap_head`为空，则直接`*pte_list = (unsigned long)spte;`直接把rmap地址的内容设置成表项地址，到这里为止，so easy……但是这并不能解决所有问题，说到这里看下函数前面的注释吧
 
 
 # 14. 参考
