--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2891,7 +2891,7 @@ static int pte_list_add(struct kvm_vcpu *vcpu, u64 *spte,
 {
         struct pte_list_desc *desc;
         int i, count = 0;
-
+        /*如果remap_head为空，直接设置逆向映射即可 */
         if (!rmap_head->val) {
                 rmap_printk("pte_list_add: %p %llx 0->1\n", spte, *spte);
                 rmap_head->val = (unsigned long)spte;
@@ -2923,7 +2923,7 @@ static int pte_list_add(struct kvm_vcpu *vcpu, u64 *spte,
 
 先走下函数流程，我们已经传递进来gfn对应的rmap的地址，就是`rmap_head`，接下来主要分为三部分；if……else if ……else
 
-首先，如果`*rmap_head`为空，则直接`*pte_list = (unsigned long)spte;`直接把rmap地址的内容设置成表项地址，到这里为止，so easy……但是这并不能解决所有问题，说到这里看下函数前面的注释吧
+首先，如果`*rmap_head`为空，则直接`*rmap_head->val = (unsigned long)spte;`直接把**rmap地址的内容**设置成**表项地址**，到这里为止，so easy……但是这并不能解决所有问题，说到这里看下函数前面的注释吧
 
 
 # 14. 参考
