--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2909,10 +2909,12 @@ static int pte_list_add(struct kvm_vcpu *vcpu, u64 *spte,
                         desc = desc->more;
                         count += PTE_LIST_EXT;
                 }
+                /*如果已经满了，就再次扩展more*/
                 if (desc->sptes[PTE_LIST_EXT-1]) {
                         desc->more = mmu_alloc_pte_list_desc(vcpu);
                         desc = desc->more;
                 }
+                /*找到首个为空的项，进行填充*/
                 for (i = 0; desc->sptes[i]; ++i)
                         ++count;
                 desc->sptes[i] = spte;
@@ -2923,7 +2925,19 @@ static int pte_list_add(struct kvm_vcpu *vcpu, u64 *spte,
 
 先走下函数流程，我们已经传递进来gfn对应的rmap的地址，就是`rmap_head`，接下来主要分为三部分；if……else if ……else
 
-首先，如果`*rmap_head`为空，则直接`*rmap_head->val = (unsigned long)spte;`直接把**rmap地址的内容**设置成**表项地址**，到这里为止，so easy……但是这并不能解决所有问题，说到这里看下函数前面的注释吧
+首先，如果`*rmap_head`为空，则直接`*rmap_head->val = (unsigned long)spte;`直接把**rmap地址的内容**设置成**表项地址**. 但是这并不能解决所有问题，说到这里看下函数前面的注释
+
+```cpp
+/*
+ * About rmap_head encoding:
+ *
+ * If the bit zero of rmap_head->val is clear, then it points to the only spte
+ * in this rmap chain. Otherwise, (rmap_head->val & ~1) points to a struct
+ * pte_list_desc containing more mappings.
+ */
+```
+
+根据注释判断，`rmap_head->val`最低一位表明这直接指向一个spte还是pte_list_desc，后者用作扩展remap.那么到了else if这里，如果*pte_list不为空且也并没有指向一个pte_list_desc，那么就坏了，根据gfn定位到了 这个remap项，但是人家已经在用了，怎么办？解决方案就是通过pte_list_desc扩展下，但是最后要表明这是一个pte_list_desc，所以要吧最后一位置1，然后设置进*pte_list。还是介绍下该结构
 
 
 # 14. 参考
