--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2937,7 +2937,7 @@ static int pte_list_add(struct kvm_vcpu *vcpu, u64 *spte,
  */
 ```
 
-根据注释判断，`rmap_head->val`最低一位表明这直接指向一个spte还是pte_list_desc，后者用作扩展remap.那么到了else if这里，如果*pte_list不为空且也并没有指向一个pte_list_desc，那么就坏了，根据gfn定位到了 这个remap项，但是人家已经在用了，怎么办？解决方案就是通过pte_list_desc扩展下，但是最后要表明这是一个pte_list_desc，所以要吧最后一位置1，然后设置进*pte_list。还是介绍下该结构
+根据注释判断，`rmap_head->val`**最低一位**表明这**直接指向一个spte**还是`pte_list_desc`，后者用作**扩展remap**. 那么到了else if这里，如果`rmap_head->val`**不为空**且也并没有指向一个`pte_list_desc`，那么就坏了，根据gfn定位到了 这个remap项，但是人家已经在用了，怎么办？解决方案就是通过pte_list_desc扩展下，但是最后要表明这是一个pte_list_desc，所以要吧最后一位置1，然后设置进*pte_list。还是介绍下该结构
 
 
 # 14. 参考
