--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2939,6 +2939,30 @@ static int pte_list_add(struct kvm_vcpu *vcpu, u64 *spte,
 
 根据注释判断，`rmap_head->val`**最低一位**表明这**直接指向一个spte**还是`pte_list_desc`，后者用作**扩展remap**. 那么到了else if这里，如果`rmap_head->val`**不为空**且也并没有指向一个`pte_list_desc`，那么就坏了，**根据gfn**定位到了**这个remap项**，但是人家已经在用了，怎么办？解决方案就是通过`pte_list_desc`**扩展**下，但是最后要**表明**这是一个`pte_list_desc`，所以要**把最后一位置1**，然后设置进`rmap_head->val`。还是介绍下该结构
 
+```cpp
+/* make pte_list_desc fit well in cache line */
+#define PTE_LIST_EXT 3
+
+struct pte_list_desc {
+        u64 *sptes[PTE_LIST_EXT];
+        struct pte_list_desc *more;
+};
+```
+
+结构比较简单，自身携带一个`PTE_LIST_EXT`大小的**指针数组**，`PTE_LIST_EXT`为3，也就是扩展一下可以**增加2个表项**，数量不多，所以如果还不够，就通过下面的**more扩展**。more又指向一个`pte_list_desc`。好了，接下看我们的else
+
+如果前两种情况都不对，这就是**remap项不为空**，且**已经指向**一个`pte_list_desc`，同样的道理我们需要获取该结构, **找到**一个能用的地方。如何找？
+
+如果`desc->sptes`已经满了，且**more不为空**，则**递归的遍历more**，while循环出来，就有两种情况
+
+1、**sptes有剩余**
+
+2、**more为空**
+
+此时进行判断，如果**sptes没满**，直接找到一个**空闲的项**，进行填充；否则，申请一个`pte_list_desc`，通过more进行扩展，然后在寻找一个空闲的。
+
+PS:上面是函数的大致流程，可是为何需要扩展呢？之前有提到，**初始化**的时候为**每个页面**都分配了**remap空间**，如果qemu进程为虚拟机分配的都是4KB的页面，那么每个页面均会对应一个位置，这样仅仅if哪里就可以了，不需要扩展。但是qemu为虚拟机分配的一般是比较大的页面，就是2M的，但是虚拟机自己分配的很可能是4KB的，这样，初始化的时候为2M的页为单位分配rmap空间，就不能保证所有的小页面都对应一个唯一的remap地址，这样就用到了扩展。
+
 
 # 14. 参考
 
