--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2961,7 +2961,7 @@ struct pte_list_desc {
 
 此时进行判断，如果**sptes没满**，直接找到一个**空闲的项**，进行填充；否则，申请一个`pte_list_desc`，通过more进行扩展，然后在寻找一个空闲的。
 
-PS:上面是函数的大致流程，可是为何需要扩展呢？之前有提到，**初始化**的时候为**每个页面**都分配了**remap空间**，如果qemu进程为虚拟机分配的都是4KB的页面，那么每个页面均会对应一个位置，这样仅仅if哪里就可以了，不需要扩展。但是qemu为虚拟机分配的一般是比较大的页面，就是2M的，但是虚拟机自己分配的很可能是4KB的，这样，初始化的时候为2M的页为单位分配rmap空间，就不能保证所有的小页面都对应一个唯一的remap地址，这样就用到了扩展。
+PS: 上面是函数的大致流程，可是为何需要扩展呢？之前有提到，**初始化**的时候为**每个页面**都分配了**remap空间**，如果**qemu进程**为虚拟机分配的都是**4KB的页面**，那么**每个页面**均会**对应一个位置**，这样仅仅if哪里就可以了，不需要扩展。但是**qemu**为虚拟机分配的一般是**比较大的页面**，就是2M/1G的，但是虚拟机自己分配的很可能是**4KB的**，这样，初始化的时候为2M的页为单位分配rmap空间，就不能保证所有的小页面都对应一个唯一的remap地址，这样就用到了扩展。
 
 
 # 14. 参考
